--- a/AirshipKit/AirshipKit.xcodeproj/xcshareddata/xcschemes/AirshipKit.xcscheme
+++ b/AirshipKit/AirshipKit.xcodeproj/xcshareddata/xcschemes/AirshipKit.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0630"
+   LastUpgradeVersion = "0710"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,69 +14,61 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB8860A7159A7E9600584445"
-               BuildableName = "libUAirship-6.2.2.a"
-               BlueprintName = "AirshipLib"
-               ReferencedContainer = "container:AirshipLib.xcodeproj">
+               BlueprintIdentifier = "494DD9561B0EB677009C134E"
+               BuildableName = "AirshipKit.framework"
+               BlueprintName = "AirshipKit"
+               ReferencedContainer = "container:AirshipKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7BB679051429288D00B877DB"
-               BuildableName = "AirshipLogicTests.xctest"
-               BlueprintName = "AirshipLogicTests"
-               ReferencedContainer = "container:AirshipLib.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CCC7CB8217C2E28700C55394"
-               BuildableName = "gadf.xctest"
-               BlueprintName = "gadf"
-               ReferencedContainer = "container:AirshipLib.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB8860A7159A7E9600584445"
-            BuildableName = "libUAirship-6.2.2.a"
-            BlueprintName = "AirshipLib"
-            ReferencedContainer = "container:AirshipLib.xcodeproj">
+            BlueprintIdentifier = "494DD9561B0EB677009C134E"
+            BuildableName = "AirshipKit.framework"
+            BlueprintName = "AirshipKit"
+            ReferencedContainer = "container:AirshipKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "494DD9561B0EB677009C134E"
+            BuildableName = "AirshipKit.framework"
+            BlueprintName = "AirshipKit"
+            ReferencedContainer = "container:AirshipKit.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
